# vc-tasks

.claude/skills/startup-scoring-critic/: SKILL.md
docs/: session.md  session2.md  session3.md  session4.md  session5.md  session6.md  session7.md
gtm/: .env.example  .gitignore  README.md  STRATEGIC_MEMO.md  benchmark.py  pyproject.toml  reporter.py  scanner.py  scout.py  translator.py  utils.py  validator.py
gtm/output/1-introduction/: migration_report.md  patch.diff
gtm/output/1-introduction/baml_src/: extractcalendarevent.baml  getreturnpolicytoolcall.baml  getweatherinfo.baml  getweathertoolcall.baml  getweathertoolcallargs.baml  retrieveknowledgebaseanswer.baml  writelimerick.baml
gtm/output/2-workflow-patterns/: migration_report.md  patch.diff
gtm/output/2-workflow-patterns/baml_src/: checksecurity.baml  clients.baml  extracteventinfo.baml  extracteventmodificationdetails.baml  extractneweventdetails.baml  generateeventconfirmation.baml  generatesectioncontent.baml  getorchestratorplan.baml  parseeventdetails.baml  reviewblogcontent.baml  routecalendarrequest.baml  validatecalendarrequest.baml
gtm/output/n-levels-of-rag/: migration_report.md  patch.diff
gtm/output/n-levels-of-rag/baml_src/: extractkeywords.baml  generatequerykeywordsforsearch.baml  generatequestionanswerpair.baml
gtm/src/baml_scout/: __init__.py  __main__.py  baml_examples.md  benchmark.py  cli.py  config.py  providers.py  reporter.py  scanner.py  translator.py  utils.py  validator.py
gtm/templates/: migration_report.md.j2
gtm/tests/: test_cli.py  test_providers.py  test_reporter.py  test_scanner.py  test_translator.py  test_utils.py
ranking/: .gitignore  CONTRACT.md  README.md  pyproject.toml
ranking/inputs/: startups.json
ranking/inputs/evaluations/: README.md  atuin.md  baml.md  beeble.md  entire.md  flint.md  hallway.md  mem0.md  parasail.md  primitive.md  quill.md  rasa.md  reve.md  solvely.md  tigris-data.md  vizcom.md
ranking/ranking/: __init__.py  __main__.py  cli.py  contract.py  report.py  scoring.py  weights.py
ranking/tests/: test_contract.py  test_scoring.py
ranking/tests/fixtures/: sample.json
