[project]
name = "baml-migration-scout"
version = "0.1.0"
description = "Point at a repo, auto-generate the BAML migration, ship a shareable report."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gitpython>=3.1.50",
    "google-genai>=2.2.0",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "typing-extensions>=4.15.0",
]
