[project]
name = "baml-migration-scout"
version = "0.2.0"
description = "Point at a repo, auto-generate the BAML migration, ship a shareable report."
readme = "README.md"
requires-python = ">=3.11"
# Default runtime keeps the $0 promise: only google-genai is required.
# openai and anthropic are opt-in extras for users who knowingly pass
# --provider openai|anthropic and supply their own paid API key.
dependencies = [
    "gitpython>=3.1.50",
    "google-genai>=2.2.0",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "typing-extensions>=4.15.0",
]

[project.optional-dependencies]
openai = ["openai>=1.50.0"]
anthropic = ["anthropic>=0.40.0"]
# `all` pulls every supported provider for convenience.
all = ["openai>=1.50.0", "anthropic>=0.40.0"]
