[project]
name = "baml-scout"
version = "0.2.0"
description = "Point at a repo, auto-generate the BAML migration, ship a shareable report."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Khang Dang" }]
keywords = ["baml", "llm", "migration", "openai", "anthropic", "gemini", "instructor", "langchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# Default runtime keeps the $0 promise: only google-genai is required.
# openai and anthropic are opt-in extras for users who knowingly pass
# --provider openai|anthropic and supply their own paid API key.
dependencies = [
    "gitpython>=3.1.50",
    "google-genai>=2.2.0",
    "jinja2>=3.1.6",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "typing-extensions>=4.15.0",
]

[project.optional-dependencies]
openai = ["openai>=1.50.0"]
anthropic = ["anthropic>=0.40.0"]
# `all` pulls every supported provider for convenience.
all = ["openai>=1.50.0", "anthropic>=0.40.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
# `pip install baml-scout` puts `baml-scout` on PATH; main() returns an
# exit code so the shell sees it.
baml-scout = "baml_scout.cli:main"

[project.urls]
Homepage = "https://github.com/Khangdang1690/vc-tasks"
Repository = "https://github.com/Khangdang1690/vc-tasks"
Issues = "https://github.com/Khangdang1690/vc-tasks/issues"

# ---------------------------------------------------------------------------
# Build system
# ---------------------------------------------------------------------------

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# src-layout: hatch needs to be told where the package lives.
packages = ["src/baml_scout"]

[tool.hatch.build.targets.wheel.force-include]
# baml_examples.md and the jinja templates are runtime data shipped inside
# the wheel. force-include guarantees they end up at the same import path
# they sit at in source, so importlib.resources("baml_scout") finds them.
"src/baml_scout/baml_examples.md" = "baml_scout/baml_examples.md"
"src/baml_scout/templates/migration_report.md.j2" = "baml_scout/templates/migration_report.md.j2"

[tool.hatch.build.targets.sdist]
include = [
    "src/baml_scout",
    "tests",
    "README.md",
    "STRATEGIC_MEMO.md",
    "pyproject.toml",
]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
