[project]
name = "ranking"
version = "0.1.0"
description = "Deterministic ranking pipeline for pre-seed/seed tech startups."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
]

[project.scripts]
ranking = "ranking.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ranking"]

[tool.pytest.ini_options]
testpaths = ["tests"]
